# es3_effects

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
c_bullet/: CMakeLists.txt  build.gradle
c_bullet/src/androidTest/java/com/ja3son/c_bullet/: ExampleInstrumentedTest.kt
c_bullet/src/main/: AndroidManifest.xml
c_bullet/src/main/cpp/bullet/: CMakeLists.txt
c_bullet/src/main/cpp/bullet/Bullet3Common/: CMakeLists.txt
c_bullet/src/main/cpp/bullet/BulletCollision/: CMakeLists.txt
c_bullet/src/main/cpp/bullet/BulletDynamics/: CMakeLists.txt
c_bullet/src/main/cpp/bullet/BulletInverseDynamics/: CMakeLists.txt
c_bullet/src/main/cpp/bullet/BulletSoftBody/: CMakeLists.txt
c_bullet/src/main/cpp/bullet/LinearMath/: CMakeLists.txt
c_bullet/src/main/cpp/jni/: bullet_JNI.cpp  bullet_JNI.h
c_bullet/src/main/java/com/ja3son/bullet/: BulletJNI.kt
c_bullet/src/main/res/values/: strings.xml
c_bullet/src/test/java/com/ja3son/c_bullet/: ExampleUnitTest.kt
cgl_lib/: CMakeLists.txt  build.gradle
cgl_lib/src/main/: AndroidManifest.xml
cgl_lib/src/main/cpp/: Context.cpp  Context.hpp  Framebuffer.cpp  Framebuffer.hpp  FramebufferCache.cpp  FramebufferCache.hpp  GLProgram.cpp  GLProgram.hpp  GPUImage-x.h  GPUImagexJNI.cpp  Ref.cpp  Ref.hpp  macros.h  math.cpp  math.hpp  native-lib.cpp  util.cpp  util.h
cgl_lib/src/main/cpp/filter/: BeautifyFilter.cpp  BeautifyFilter.hpp  BilateralFilter.cpp  BilateralFilter.hpp  BrightnessFilter.cpp  BrightnessFilter.hpp  ColorInvertFilter.cpp  (+71 more)
gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
